# NexaPod

./: .flake8  LICENSE  Makefile  README.md  RELEASE_NOTES.md  docker-compose.yaml  index.html  manifest.json  nexapod-globe.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Client/: __init__.py  archiver.py  comms.py  config.yaml  contributor_wall_app.py  dashboard.py  descriptor.py  executor.py  input_fetch.py  ledger.py  logger.py  network.html  nexapod_client.py  profiles.py  reputation.py  requirements.txt
Docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  Doc.md  Nexa_Ecosystem.md  ONBOARDING.md  PROTOCOL.md
Infrastructure/: Dockerfile.client  __init__.py  api.py  database.py  nexapod.db  node.py  perf_estimator.py  replication.py  runner.py  validator.py
Infrastructure/k8s/: client.yaml  network-policy.yaml
Infrastruture/: Descriptor.py  Dockerfile.client  Dockerfile.server  __init__.py  api.py  database.py  node.py  output_validator.py  perf_estimator.py  rate_limiter.py  rates_limiter.py  replication.py  runner.py  scheduler.py  tier.py  validator.py
Infrastruture/k8s/: client.yaml  network-policy.yaml  nexapod-client-config.yaml  nexapod-server-config.yaml  prometheus-scrape-nexapod.yaml  server.yaml
NexaPod_CLI/: __init__.py  main.py
Protocol/: nexapod.proto  protocol.py
Protocol/security/: security.py
Runner/: Bio_Runner.py  NexaBio_1_pruned20.safetensors  __init__.py  input.fasta  result.json
Server/: __init__.py  app.py  config.yaml  db.py  reputation.py  requirements.txt  scheduler.py
examples/: __init__.py  fold_job.json  quantum_sim.py  surrogate_material.py  weather_ensemble.py
nexapod/: __init__.py
scripts/: NexaPod.ps1  NexaPod.sh  check_lint.py  cleanup.sh  deploy.sh  lint.sh
templates/: contributor_wall.html
tests/: test_client.py
