[project]
name = "nexapod"
version = "0.1.0"
description = "Distributed compute fabric for scientific problems"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
  "boto3==1.39.14",
  "cryptography==45.0.5",
  "docker==7.1.0",
  "fastapi==0.115.14",
  "Flask==3.1.1",
  "ipfshttpclient==0.7.0",
  "networkx==3.4.2",
  "numpy==2.2.6",
  "pandas==2.3.1",
  "plotly==6.2.0",
  "prometheus_client==0.22.1",
  "psutil==7.0.0",
  "PyYAML==6.0.2",
  "pydantic==2.11.7",
  "pytest==8.4.1",
  "requests==2.32.4",
  "safetensors==0.5.3",
  "streamlit==1.47.0",
  "torch==2.7.1",
  "uvicorn==0.35.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/nexapod"
Repository = "https://github.com/yourusername/nexapod"
Issues = "https://github.com/yourusername/nexapod/issues"

[tool.setuptools]

[tool.uv]
python-preference = "system"  # Use activated venv or system Python
